# tinyterm

./: .gitignore  CMakeLists.txt  tinyterm_config.h
example/: CMakeLists.txt  example_commands.c  example_commands.h  example_linux.c
include/: tinyterm.h
src/: tinyterm.c
